--- a/Municipios.Rmd
+++ b/Municipios.Rmd
@@ -53,7 +53,9 @@ library(units)
 library(reactable)
 library(lubridate)
 library(zoo)
-library(Cairo)
+library(leaflet)
+library("Cairo")
+library(htmltools)
 ```
 
 ```{r, include=FALSE}
@@ -110,6 +112,7 @@ casos_ult_dias <- mutate(casos_ult, Dias_ult=as.numeric(Sys.Date()-Fecha))
 casos_ult_dias <- mutate(casos_ult_dias, clasfdias=if_else(Dias_ult>30,5, if_else(Dias_ult>14,4, if_else(Dias_ult>7,3,if_else(Dias_ult>0,2,1)))))
 casos_ult_dias <- mutate(casos_ult_dias, clasfdias=as.numeric(clasfdias))
 casos_ult_dias <- mutate(casos_ult_dias,id=CVEGEO)
+diaspmap<-casos_ult_dias %>%  rename(FechaUC=Fecha) %>% select(FechaUC, CVEGEO, Dias_ult, clasfdias)
 write.csv(casos_ult_dias,'ResultadoCSV/Municipiosdiasdesdecasos.csv')
 ```
 
@@ -120,7 +123,7 @@ decesosacumdia3 <- rename(decesosacumdia,'DECESOS NUEVOS'=NUEVOS)
 casosacumdia3 <- rename(casosacumdia,'CASOS NUEVOS'=NUEVOS)
 casosdecesos <-left_join(casosacumdia3, decesosacumdia3,by = c("CVEGEO","Fecha","MUNICIPIO"))
 casosdecesospob <- left_join(casosdecesos, POBMUN, by = "CVEGEO")
-Indicadores <- casosdecesospob %>% mutate (INCIDENCIA = round((CASOS*100000)/POB,1), MORTALIDAD = round((DECESOS*100000)/POB,1), LETALIDAD = round((DECESOS*100/CASOS),1))
+Indicadores <- casosdecesospob %>% mutate (INCIDENCIAACUM = round((CASOS*100000)/POB,1), MORTALIDADACUM = round((DECESOS*100000)/POB,1), LETALIDAD = round((DECESOS*100/CASOS),1))
 Indicadores <- rename(Indicadores, POBLACION=POB)
 Indicadores <- mutate(Indicadores,id=CVEGEO)
 ```
@@ -388,226 +391,186 @@ modeBarButtonsToRemove = list(
 ))
 ```
 
-Casos acumulados
+Mapa municipal
 ===================================== 
 
 Row
 -----------------------------------------------------------------------
-### **Mapa de Incidencia**
+### **Incidencia y mortalidad municipal al 22/11/2020**
 
 ```{r include=FALSE}
-capa_munison <- readOGR("Shapes", layer="MUNSON")
-capa_son <- readOGR("Shapes", layer="ENTSON")
-```
+Casossemana <- Casos %>% mutate(Semana = isoweek(Fecha)) %>% group_by(Semana) %>% 
+  mutate (Reporte=max(as.Date(Fecha))) %>% ungroup()
+Casossem <- group_by(Casossemana, CVEGEO, MUNICIPIO, Reporte, Semana) %>% 
+  summarise('CASOS SEMANALES' = sum(NUEVOS)) 
+casossempob <- left_join(Casossem, POBMUN, by = "CVEGEO") 
+casossempob  <- casossempob %>% mutate (INCIDENCIASEM= round((`CASOS SEMANALES`*100000)/POB,1))
+casossempob$INCIDENCIASEM[casossempob$INCIDENCIASEM==0] <- NA
+casossempob  <- casossempob %>% filter(Semana==47)
+casossempob   <- mutate(casossempob , IS=if_else(INCIDENCIASEM>143,5, if_else(INCIDENCIASEM>59,4, if_else(INCIDENCIASEM>30,3,if_else(INCIDENCIASEM>15,2,1)))))
+Casossemanales <- casossempob %>% select(CVEGEO, MUNICIPIO, 'CASOS SEMANALES', INCIDENCIASEM, IS)
 
-```{r, include=FALSE}
-capa_munison_df <- fortify(capa_munison, region="concat")
-capa_munison_casos<- inner_join(capa_munison_df, Indicadores, by="id")
-```
-
-```{r, include=FALSE}
-capa_munison_casos$tooltip <- c(paste0("<b>",capa_munison_casos$MUNICIPIO, "</b>", "<b>","\n Casos ", "</b>", capa_munison_casos$CASOS,"</b>", "<b>","\n Incidencia ", "</b>", capa_munison_casos$INCIDENCIA))
-Mapa_casos <- ggplot(capa_munison_casos, aes(map_id = id)) +
-               geom_polygon(data=capa_son, aes(x=long, y=lat, group=group), 
-               fill="transparent", color="black", size=1) +
-        geom_polygon(data=capa_munison, aes(x=long, y=lat, group=group), 
-               fill="gray90", color="white", size=0.3) +
-     geom_map_interactive(aes(fill = INCIDENCIA, tooltip=capa_munison_casos$tooltip,data_id=id),color = "white",size=0.3, map = capa_munison_df) + 
-    scale_fill_gradient(low = "#58BCBC", high = "black")+
-    theme_void() +
-   theme(plot.title = (element_text(family = "Lato Black", size = 15, color = "#01A2AC")),
-    legend.position = "left",
-    legend.key.height = unit (2, "cm"), axis.text = element_blank(),
-    legend.text = element_text(family = "Lato Light", size = 6, color = "black"),
-    legend.title = element_text(family = "Lato Black", size = 5, color = "black"),
-    plot.caption = element_text(family = "Lato Light", size = 8, color = "gray50"),
-    axis.title = element_blank()) +
-    labs(axis = NULL, y = NULL, x = NULL, title  = NULL, caption ="Elaboración Luis Armando Moreno con información de la Secretaría de Salud del Estado de Sonora", fill = "INCIDENCIA\n(casos por 100 mil habs.)")
-```
-
-```{r, include=FALSE}
-tooltip_css <- "background-color:#01787E; color:white;font-family: Lato, sans-serif;opacity: 0.25; padding:5px"
-Casos_map_ani <- girafe(code = print(Mapa_casos),
-  options = list(opts_tooltip(css = tooltip_css)) )
-```
-
-```{r}
-Casos_map_ani 
-```
-
-### **Casos acumulados al 15 de noviembre de 2020**
-
-```{r, include=FALSE}
-Indicadoresord1 <- arrange(Indicadores,CASOS, desc(MUNICIPIO))
-CasosCol <- ggplot(Indicadoresord1) +
-    geom_col(aes(x = fct_inorder(MUNICIPIO), y = `CASOS`, fill = INCIDENCIA), color = "white") + 
-  geom_text(aes(x = fct_inorder(MUNICIPIO), y = `CASOS`, label=`CASOS`, family="Lato"), size=2, vjust=0.4, hjust=-0.4) +
-geom_vline(xintercept=seq(1.5,length(unique(Indicadoresord1$MUNICIPIO))-0.5, 1),lwd=0.2, colour="gray95") + 
-  coord_flip(clip = "off") + 
-   scale_fill_gradient(low = "#58BCBC", high = "black") +
-       theme_minimal() +
-    theme(
-    legend.position = "none",
-    axis.text.y = element_text(family = "Lato", size = 4, color = "black"),
-    axis.text.x = element_blank(),axis.line.y = element_line(colour = "black"),
-    panel.background = element_blank(),
-    panel.grid.major.y = element_blank(), 
-    panel.grid.minor.y = element_blank(),
-    panel.grid.major.x = element_blank(),
-    panel.grid.minor.x = element_blank(),
-    axis.title = element_text(family = "Lato", size = 8),
-    plot.margin=unit(c(0,2,0,0),"cm")) + 
-    labs(y = NULL, x = NULL) 
-```
-
-```{r}
-CasosCol
-```
-
-Último caso confirmado
-===================================== 
-
-Row
------------------------------------------------------------------------
-### **¿Cuántos días han pasado desde que se confirmó el último caso en tu municipio?** {data-width=500}
-
-```{r, include=FALSE}
-capa_ult_dias<- inner_join(capa_munison_df, casos_ult_dias, by="id")
-```
-
-```{r, include=FALSE}
-capa_ult_dias$tooltip <- c(paste0("<b>",capa_ult_dias$MUNICIPIO, "</b>", "<b>","\n Último caso ", "</b>", capa_ult_dias$Fecha,"</b>", "<b>","\n Días ", "</b>", capa_ult_dias$Dias_ult))
-discreta <- c("1" = "#A04A69", "2" = "#ECA48E","3" = "#FECF7D","4" = "#0397A1", "5" = "#215968")
-Mapa_ult <- ggplot(capa_ult_dias, aes(map_id = id)) +
-               geom_polygon(data=capa_son, aes(x=long, y=lat, group=group), 
-               fill="transparent", color="black", size=1) +
-    geom_polygon(data=capa_munison, aes(x=long, y=lat, group=group), 
-               fill="gray90", color="white", size=0.3) +
-     geom_map_interactive(aes(fill = factor(clasfdias), tooltip=capa_ult_dias$tooltip,data_id=id),color = "white",size=0.3, map = capa_munison_df) + 
-    scale_fill_manual("Días desde que se \n confirmó el último caso", values = discreta, breaks= c("5", "4", "3", "2", "1"), labels = c( "+30", "15-30", "8-14","1-7", "0"))+
-    theme_void() +
-   theme(plot.title = (element_text(family = "Lato Black", size = 15, color = "#01A2AC")),
-    legend.position = "left", axis.text = element_blank(), legend.key.height = unit (2, "cm"),
-    legend.text = element_text(family = "Lato Light", size = 6, color = "black"),
-    legend.title = element_text(family = "Lato Black", size = 5, color = "black"),
-    plot.caption = element_text(family = "Lato Light", size = 8, color = "gray50"),
-    axis.title = element_blank()) +
-    labs(axis = NULL, y = NULL, x = NULL, title  = NULL, caption ="Elaboración Luis Armando Moreno con información de la Secretaría de Salud del Estado de Sonora", fill = "Días desde que se confirmó el último caso")
- 
-```
-
-```{r, include=FALSE}
-tooltip_css <- "background-color:#BFBFBF; color:black;font-family: Lato, sans-serif;opacity: 0.25; padding:5px"
-hover_css <- "stroke:black;stroke-width:0.5pt;"
-Casos_ult_ani <- girafe(code = {print(Mapa_ult)}, 
-  options = list(opts_tooltip(css = tooltip_css), opts_hover(hover_css)) )
-```
-
-```{r}
-Casos_ult_ani 
-```
-
-### **Días desde el último caso confirmado (corte al 15/11/2020)**  {data-width=500}
-
-```{r, include=FALSE}
-casos_ult_dias_order <- arrange(casos_ult_dias,Dias_ult, desc(MUNICIPIO))
-Casos_ultCol <- ggplot(casos_ult_dias_order) +
-    geom_col(aes(x = fct_inorder(MUNICIPIO), y = Dias_ult, fill = factor(clasfdias)), color = "white") + 
-  geom_text(aes(x = fct_inorder(MUNICIPIO), y = Dias_ult, label=Dias_ult, family="Lato"), size=2, vjust=0.4, hjust=-0.4) +
-  geom_vline(xintercept=seq(1.5,length(unique(casosacumdiaorder$MUNICIPIO))-0.5, 1),lwd=0.2, colour="gray95") + 
-  coord_flip(clip = "off") + 
-   scale_fill_manual(values = discreta)+
-       theme_minimal() +
-    theme(
-    legend.position = "none",
-    axis.text.y = element_text(family = "Lato", size = 4, color = "black"),
-    axis.text.x = element_blank(),axis.line.y = element_line(colour = "black"),
-    panel.background = element_blank(),
-    legend.title = element_text(family = "Lato Black", size = 5, color = "black"),
-    panel.grid.major.y = element_blank(), 
-    panel.grid.minor.y = element_blank(),
-    panel.grid.major.x = element_blank(),
-    panel.grid.minor.x = element_blank(),
-    axis.title = element_text(family = "Lato", size = 8),
-    plot.margin=unit(c(0,2,0,0),"cm")) + 
-    labs(y = NULL, x = NULL) 
-```
-
-```{r}
-Casos_ultCol
-```
-
-Decesos acumulados
-===================================== 
-
-Row
------------------------------------------------------------------------
-### **Mapa de Mortalidad** {data-width=500}
+Decesossemana <- Decesos %>% mutate(Semana = isoweek(Fecha)) %>% group_by(Semana) %>% 
+  mutate (Reporte=max(as.Date(Fecha))) %>% ungroup()
+Decesossem <- group_by(Decesossemana, CVEGEO, MUNICIPIO, Reporte, Semana) %>% 
+  summarise('DECESOS SEMANALES' = sum(NUEVOS)) 
+Decesossempob <- left_join(Decesossem, POBMUN, by = "CVEGEO") 
+Decesossempob  <- Decesossempob %>% mutate (MORTALIDADSEM= round((`DECESOS SEMANALES`*100000)/POB,1))
+Decesossempob$MORTALIDADSEM[Decesossempob$MORTALIDADSEM==0] <- NA
+Decesossempob  <- Decesossempob %>% filter(Semana==47)
+Decesossempob   <- mutate(Decesossempob , MS=if_else(MORTALIDADSEM>22,5, if_else(MORTALIDADSEM>9,4, if_else(MORTALIDADSEM>4,3,if_else(MORTALIDADSEM>2,2,1)))))
+Decesossemanales <- Decesossempob %>% select(CVEGEO, MUNICIPIO, 'DECESOS SEMANALES', MORTALIDADSEM, MS)
 
 
-```{r, include=FALSE}
-Indicadores2<- Indicadores %>% mutate(DECESOS = coalesce(DECESOS,0L)) %>% filter(DECESOS>"0")
-capa_munison_decesos<- inner_join(capa_munison_df, Indicadores2, by="id")
-```
 
-```{r, include=FALSE}
-capa_munison_decesos$tooltip <- c(paste0("<b>",capa_munison_decesos$MUNICIPIO, "</b>", "<b>","\n Decesos ", "</b>", capa_munison_decesos$DECESOS,"</b>", "<b>","\n Mortalidad ", "</b>", capa_munison_decesos$MORTALIDAD))
-Mapa_decesos <- ggplot(capa_munison_decesos, aes(map_id = id)) +
-               geom_polygon(data=capa_son, aes(x=long, y=lat, group=group), 
-               fill="transparent", color="black", size= 1) +
-        geom_polygon(data=capa_munison, aes(x=long, y=lat, group=group), 
-               fill="gray90", color="white", size=0.3) +
-     geom_map_interactive(aes(fill = MORTALIDAD, tooltip=capa_munison_decesos$tooltip, data_id=id),color = "white",size=0.3, map = capa_munison_df) + 
-    scale_fill_gradient(low= "#993366", high = "black")+
-    theme_void() +
-   theme(plot.title = (element_text(family = "Lato Black", size = 15, color = "#01A2AC")),
-    legend.position = "left",
-    legend.key.height = unit (2, "cm"), axis.text = element_blank(),
-    legend.text = element_text(family = "Lato Light", size = 6, color = "black"),
-    legend.title = element_text(family = "Lato Black", size = 5, color = "black"),
-    plot.caption = element_text(family = "Lato Light", size = 8, color = "gray50"),
-    axis.title = element_blank()) +
-    labs(axis = NULL, y = NULL, x = NULL, title  = NULL, caption ="Elaboración Luis Armando Moreno con información de la Secretaría de Salud del Estado de Sonora", fill = "MORTALIDAD\n(decesos por 100 mil habs.)")
- 
-```
+Mapa <- Indicadores %>%  left_join(diaspmap, by = c("CVEGEO","MUNICIPIO")) %>% 
+  left_join(Casossemanales, by = c("CVEGEO","MUNICIPIO")) %>% left_join(Decesossemanales, by = c("CVEGEO","MUNICIPIO"))%>% rename(concat=CVEGEO) %>% 
+  mutate(IA=if_else(INCIDENCIAACUM>1357,5, if_else(INCIDENCIAACUM>907,4,if_else(INCIDENCIAACUM>508,3,if_else(INCIDENCIAACUM>304,2,1)))))%>% 
+  mutate(MA=if_else(MORTALIDADACUM>168,5, if_else(MORTALIDADACUM>107,4, if_else(MORTALIDADACUM>77,3,if_else(MORTALIDADACUM>50,2,1)))))
 
-```{r, include=FALSE}
-tooltip_css <- "background-color:#73264D; color:white;font-family: Lato, sans-serif;opacity: 0.25; padding:5px"
-Decesos_map_ani <- girafe(code = print(Mapa_decesos),
-  options = list(opts_tooltip(css = tooltip_css)) )
+
+
+capa_munison <- readOGR("Shapes", layer="MUNSON",  encoding = "UTF-8", use_iconv=TRUE)
+NOMMAY <- capa_munison@data %>% select(concat, NOM_MUN) %>% mutate(NOMMAY=toupper(NOM_MUN))
+capa_munison <- capa_munison %>%  merge(Mapa) %>% merge(NOMMAY)
+
+
+#incipal <- low = "#58BCBC", high = "black"
+#incipal <-  colorNumeric(c("#58BCBC", "black"), domain = capa_munison$INCIDENCIA, na.color ="#d9d9d9")
+#mortpal <-  colorNumeric(c("#993366", "black"), domain = capa_munison$MORTALIDAD, na.color ="#d9d9d9")
+diaspal <-  colorFactor(c("#A04A69","#ECA48E", "#FECF7D","#0397A1", "#215968"), levels= c("1","2","3","4","5"), domain = capa_munison$clasfdias, na.color ="#d9d9d9")
+incipal <-  colorFactor(c("black","#005155", "#01787E","#01A2AC", "#58BCBC"), levels= c("5","4","3","2","1"), na.color ="#d9d9d9")
+mortpal <-  colorFactor(c("black","#4D1A33","#73264D", "#993366","#D075A3"), levels= c("5","4","3","2","1"), na.color ="#d9d9d9")
+#discreta <- c("5" = "black", "4" = "#005155","3" = "#01787E","2" = "#01A2AC", "1" = "#58BCBC")
+
+labs <- c("Muy baja","Baja", "Media", "Alta", "Muy alta")
+diaslab <- c( "0", "1-7", "8-14", "15-30","+30")
+
+#ultpal <- ("Días desde que se \n confirmó el último caso", 
+ #          values = discreta, breaks= c("5", "4", "3", "2", "1"), 
+  #         labels = c( "+30", "15-30", "8-14","1-7", "0")),
+ #c("1" = "#A04A69", "2" = "#ECA48E","3" = "#FECF7D","4" = "#0397A1", "5" = "#215968")
+#letpal low= "#993366", high = "black"
+
+popup <- paste0(
+  "<b>", as.character(capa_munison$NOMMAY), "</b>",     "<br>",                     
+  "<b>", "Casos acumulados: ",        "</b>",   as.character(capa_munison$CASOS)   ,      "<br>",
+  "<b>", "Casos última semana: ",           "</b>",   as.character(capa_munison$'CASOS SEMANALES'),      "<br>", 
+  "<b>", "Decesos acumulados: ",           "</b>",   as.character(capa_munison$DECESOS) ,      "<br>", 
+  "<b>", "Decesos última semana: ",           "</b>",   as.character(capa_munison$'DECESOS SEMANALES'),      "<br>",
+  "<b>", "Día del último caso confirmado ",  "</b>",   as.Date(capa_munison$FechaUC) , "<br>")  %>% lapply(htmltools::HTML)
+
+
+
+
+mapacovid <- leaflet(capa_munison) %>% 
+    addProviderTiles(providers$CartoDB.PositronNoLabels) %>%
+    addLayersControl( 
+      baseGroups = c("INCIDENCIA ACUMULADA","INCIDENCIA ÚLTIMA SEMANA", "MORTALIDAD ACUMULADA", "MORTALIDAD ÚLTIMA SEMANA"), 
+      options = layersControlOptions(collapsed = TRUE)) %>% 
+    addPolygons(data= capa_munison,
+                stroke= TRUE,
+                weight=1.2,                   
+              opacity=1,
+              fillColor = ~incipal(capa_munison$IA),
+              #label = capa_munison$NOMMAY,
+              color= "white",
+              fillOpacity = 1,
+              smoothFactor = 0.5,
+              highlightOptions = highlightOptions(color = "black", 
+                                                  weight = 1.2,
+                                                  bringToFront = TRUE),
+              label=popup, 
+              labelOptions = labelOptions(noHide = F, direction = "top",
+                                                       style = list(
+                                                         "color" = "black",
+                                                         "font-family" = "Lato",
+                                                         "font-style" = "regular",
+                                                         "box-shadow" = "2px 2px rgba(0,0,0,0.25)",
+                                                         "font-size" = "11px",
+                                                         "border-color" = "rgba(0,0,0,0.5)"
+                                                       )),
+              group= "INCIDENCIA ACUMULADA") %>%
+  addPolygons(data= capa_munison,
+              stroke= TRUE,
+              weight=1.2,                   
+              opacity=1,
+              fillColor = ~incipal(capa_munison$IS),
+              #label = capa_munison$NOMMAY,
+              color= "white",
+              fillOpacity = 1,
+              smoothFactor = 0.5,
+              highlightOptions = highlightOptions(color = "black", 
+                                                  weight = 1.2,
+                                                  bringToFront = TRUE),
+              label=popup, 
+              labelOptions = labelOptions(noHide = F, direction = "top",
+                                          style = list(
+                                            "color" = "black",
+                                            "font-family" = "Lato",
+                                            "font-style" = "regular",
+                                            "box-shadow" = "2px 2px rgba(0,0,0,0.25)",
+                                            "font-size" = "11px",
+                                            "border-color" = "rgba(0,0,0,0.5)"
+                                          )),
+              group= "INCIDENCIA ÚLTIMA SEMANA") %>%
+  addPolygons(data= capa_munison,
+              stroke= TRUE,
+              weight=1.2,                   
+              opacity=1,
+              fillColor = ~mortpal(capa_munison$MS),
+              color= "white",
+              fillOpacity = 1,
+              smoothFactor = 0.5,
+              highlightOptions = highlightOptions(color = "black", 
+                                                  weight = 1.2,
+                                                  bringToFront = TRUE),
+              label=popup, 
+              labelOptions = labelOptions(noHide = F, direction = "top",
+                                          style = list(
+                                            "color" = "black",
+                                            "font-family" = "Lato",
+                                            "font-style" = "regular",
+                                            "box-shadow" = "2px 2px rgba(0,0,0,0.25)",
+                                            "font-size" = "11px",
+                                            "border-color" = "rgba(0,0,0,0.5)"
+                                          )),
+              group= "MORTALIDAD ÚLTIMA SEMANA") %>%
+  addPolygons(data= capa_munison,
+              stroke= TRUE,
+              weight=1.2,                   
+              opacity=1,
+              fillColor = ~mortpal(capa_munison$MA),
+              color= "white",
+              fillOpacity = 1,
+              smoothFactor = 0.5,
+              highlightOptions = highlightOptions(color = "black", 
+                                                  weight = 1.2,
+                                                  bringToFront = TRUE),
+              label=popup, 
+              labelOptions = labelOptions(noHide = F, direction = "top",
+                                          style = list(
+                                            "color" = "black",
+                                            "font-family" = "Lato",
+                                            "font-style" = "regular",
+                                            "box-shadow" = "2px 2px rgba(0,0,0,0.25)",
+                                            "font-size" = "11px",
+                                            "border-color" = "rgba(0,0,0,0.5)"
+                                          )),
+              group= "MORTALIDAD ACUMULADA") %>%
+  addLegend(position = "bottomleft", pal = mortpal, values = ~capa_munison$MA, opacity=1, group= "MORTALIDAD", 
+            labFormat = function(type, cuts, p) {  
+              paste0(labs)},
+            title = "MORTALIDAD", na.label = "N/A")  %>%
+  addLegend(position = "bottomleft", pal = incipal, values = ~capa_munison$IA, opacity=1, group= "INCIDENCIA", 
+              labFormat = function(type, cuts, p) {  
+               paste0(labs)},
+              title = "INCIDENCIA", na.label = "N/A") 
+
 ```
 
 ```{r}
-Decesos_map_ani 
-```
-
-### **Decesos acumulados al 15 de noviembre de 2020** {data-width=500}
-
-```{r, include=FALSE}
-Indicadoresord2 <- arrange(Indicadores2,DECESOS, desc(MUNICIPIO))
-DecesosCol <- ggplot(Indicadoresord2) +
-    geom_col(aes(x = fct_inorder(MUNICIPIO), y = `DECESOS`, fill = MORTALIDAD), color = "white") + 
-  geom_text(aes(x = fct_inorder(MUNICIPIO), y = `DECESOS`, label=DECESOS, family="Lato"), size=2, vjust=0.4, hjust=-0.4) +
-geom_vline(xintercept=seq(1.5,length(unique(Indicadores2$MUNICIPIO))-0.5, 1),lwd=0.2, colour="gray95") + 
-  coord_flip(clip = "off") + 
-   scale_fill_gradient(low= "#993366", high = "black") +
-       theme_minimal() +
-    theme(
-    legend.position = "none",
-    axis.text.y = element_text(family = "Lato Light", size = 7, color = "black"),
-    axis.text.x = element_blank(), axis.line.y = element_line(colour = "black"),
-    panel.background = element_blank(),
-    panel.grid.major.y = element_blank(), 
-    panel.grid.minor.y = element_blank(),
-    panel.grid.major.x = element_blank(),
-    panel.grid.minor.x = element_blank(),
-    axis.title = element_text(family = "Lato", size = 8),
-    plot.margin=unit(c(0,2,0,0),"cm")) + 
-    labs(y = NULL, x = NULL) 
-```
-
-```{r}
-DecesosCol
+mapacovid
 ```
 
 Evolución
@@ -618,7 +581,7 @@ Row {.tabset}
 ### **Casos semanales**
 ```{r}
 Casossemana <- Casos %>% mutate(Semana = isoweek(Fecha)) %>% group_by(Semana) %>% mutate (Reporte=max(as.Date(Fecha))) %>% ungroup()
-Casossem <- group_by(Casossemana, MUNICIPIO, Reporte, Semana) %>% summarise('CASOS SEMANALES' = sum(NUEVOS), ACUMULADOS=max(CASOS)) %>% filter(Semana!=47)
+Casossem <- group_by(Casossemana, MUNICIPIO, Reporte, Semana) %>% summarise('CASOS SEMANALES' = sum(NUEVOS), ACUMULADOS=max(CASOS)) %>% filter(Semana!=48)
 write.csv(Casossem, 'ResultadoCSV/casossem.csv')
 Casos_Semanales <- ggplot(subset(Casossem, MUNICIPIO %in% c("Hermosillo", "Cajeme", "Nogales", "San Luis Río Colorado", "Navojoa", "Guaymas", "Caborca", "Agua Prieta", "Huatabampo", "Puerto Peñasco", "Etchojoa", "Empalme", "Cananea","Magdalena", "Álamos", "Bácum"))) +
     geom_col(mapping = aes(x = Reporte, y = `CASOS SEMANALES`, fill = `CASOS SEMANALES`, label= ACUMULADOS)) +
@@ -653,7 +616,7 @@ modeBarButtonsToRemove = list(
 ### **Decesos semanales**
 ```{r}
 Decesossemana <- Decesos %>% mutate(Semana = isoweek(Fecha)) %>% group_by(Semana) %>% mutate (Reporte=max(as.Date(Fecha))) %>% ungroup()
-Decesossem <- group_by(Decesossemana, MUNICIPIO, Reporte, Semana) %>% summarise('DECESOS SEMANALES' = sum(NUEVOS), ACUMULADOS=max(DECESOS)) %>% filter(Semana!=47)
+Decesossem <- group_by(Decesossemana, MUNICIPIO, Reporte, Semana) %>% summarise('DECESOS SEMANALES' = sum(NUEVOS), ACUMULADOS=max(DECESOS)) %>% filter(Semana!=48)
 write.csv(Decesossem, 'ResultadoCSV/decesossem.csv')
 Decesos_Semanales <- ggplot(subset(Decesossem, MUNICIPIO %in% c("Hermosillo", "Cajeme", "Nogales", "San Luis Río Colorado", "Navojoa", "Guaymas", "Caborca", "Agua Prieta", "Huatabampo", "Puerto Peñasco", "Etchojoa", "Empalme", "Cananea","Magdalena", "Álamos", "Bácum"))) +
     geom_col(mapping = aes(x = Reporte, y = `DECESOS SEMANALES`, fill = `DECESOS SEMANALES`, label= ACUMULADOS)) +
@@ -760,10 +723,10 @@ modeBarButtonsToRemove = list(
 
 Indicadores
 =====================================
-**Al 08 de noviembre de 2020**  [Descarga esta tabla](https://onedrive.live.com/download.aspx?resid=5ADDF6870413EAC9!32159&authkey=!AC27R9r4fs_DWP4)
+**Al 22 de noviembre de 2020**  [Descarga esta tabla](https://onedrive.live.com/download.aspx?resid=5ADDF6870413EAC9!32159&authkey=!AC27R9r4fs_DWP4)
 ```{r}
-CDSELECT<-select(Indicadores, "MUNICIPIO","POBLACION", "CASOS","CASOS NUEVOS","INCIDENCIA", "DECESOS","DECESOS NUEVOS","MORTALIDAD", "LETALIDAD")
-CDSELECT1 <- CDSELECT %>% mutate(DECESOS = coalesce(DECESOS,0L),`DECESOS NUEVOS` = coalesce(`DECESOS NUEVOS`,0L), `CASOS NUEVOS` = coalesce(`CASOS NUEVOS`,0L), MORTALIDAD = coalesce(MORTALIDAD, 0), LETALIDAD = coalesce(LETALIDAD, 0))
+CDSELECT<- Mapa %>% select("MUNICIPIO","POBLACION", "CASOS","CASOS SEMANALES","INCIDENCIAACUM", "DECESOS","DECESOS SEMANALES","MORTALIDADACUM", "LETALIDAD") %>% rename(INCIDENCIA=INCIDENCIAACUM, MORTALIDAD=MORTALIDADACUM)
+CDSELECT1 <- CDSELECT %>% mutate(DECESOS = coalesce(DECESOS,0L),`DECESOS SEMANALES` = coalesce(`DECESOS SEMANALES`,0L), `CASOS SEMANALES` = coalesce(`CASOS SEMANALES`,0L), MORTALIDAD = coalesce(MORTALIDAD, 0), LETALIDAD = coalesce(LETALIDAD, 0))
 reactable(CDSELECT1,searchable = TRUE, highlight = TRUE, defaultSorted = "CASOS", defaultSortOrder = "desc",
   defaultPageSize = 20, minRows = 10, borderless = FALSE, striped = FALSE,
     language = reactableLang(
@@ -799,13 +762,13 @@ reactable(CDSELECT1,searchable = TRUE, highlight = TRUE, defaultSorted = "CASOS"
         var total = values.reduce(function(a, b) { return a + b }, 0)
         return total.toFixed(0)
       }"), 
-    ), 'CASOS NUEVOS' = colDef(
+    ), 'CASOS SEMANALES' = colDef(
       footer = JS("function(colInfo) {
         var values = colInfo.data.map(function(row) { return row[colInfo.column.id] })
         var total = values.reduce(function(a, b) { return a + b }, 0)
         return total.toFixed(0)
       }"), 
-    ), 'DECESOS NUEVOS' = colDef(
+    ), 'DECESOS SEMANALES' = colDef(
       footer = JS("function(colInfo) {
         var values = colInfo.data.map(function(row) { return row[colInfo.column.id] })
         var total = values.reduce(function(a, b) { return a + b }, 0)
@@ -832,20 +795,40 @@ reactable(CDSELECT1,searchable = TRUE, highlight = TRUE, defaultSorted = "CASOS"
 write.csv(CDSELECT1,'ResultadoCSV/Indicadores-Municipios-Sonora.csv')
 ```
 
-Fuentes
+Notas
 ===================================== 
+**NOTAS**
 
-**Fuente:** Captura propia de los reportes diarios de la Secretaría de Salud del Estado de Sonora | Proyecciones de población para los municipios de Sonora a mediados de 2020 del Consejo Nacional de Población.
+**INCIDENCIA** = Casos confirmados * 100 mil / Población
+
+**MORTALIDAD** = Decesos confirmados * 100 mil / Población
+
+**LETALIDAD** = Decesos confirmados * 100 / Casos confirmados
+
+La clasificación de la incidencia y la mortalidad municipal se refiere a ordenar de menor a mayor los resultados municipales y tomar los **cuantiles**: 
+
+**Muy baja:** 0%-25%
+
+**Baja:** 25%-50%
+
+**Media:** 50%-75%
+
+**Alta:** 75%-95%
+
+**Muy alta:** >95%
+
+Por ejemplo, tomando la incidencia semanal, aquellos municipios que se encuentren en la clasificación "Muy alta" se refiere a que pertenecen al 5% de las semanas con mayor incidencia en el Estado.
 
 
+**FUENTES**
 
-Repositorio del proyecto: [Covid19-Sonora-Municipios](https://github.com/dogomoreno/Covid19-Sonora-Municipios) 
+Captura propia de los reportes diarios de la Secretaría de Salud del Estado de Sonora
 
-
+Proyecciones de población para los municipios de Sonora a mediados de 2020 del Consejo Nacional de Población.
 
 [Plataforma Covid-19 del Departamento de Matemáticas de la Universidad de Sonora](https://covid19data.unison.mx/)
 
-
+**DESCARGAS**
 
 [CSV Casos confirmados municipales](https://onedrive.live.com/download.aspx?resid=5ADDF6870413EAC9!40221&authkey=!AHWUE_EQfhvGRm4)
 
@@ -857,6 +840,8 @@ Repositorio del proyecto: [Covid19-Sonora-Municipios](https://github.com/dogomor
 
 
 
+
+**Repositorio del proyecto:** [Covid19-Sonora-Municipios](https://github.com/dogomoreno/Covid19-Sonora-Municipios) 
 
 [www.luisarmandomoreno.com](www.luisarmandomoreno.com)
 
